@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.12
 
+  *) mod_info: Dump config to stdout during startup if -DDUMP_CONFIG is
+     specified. [Stefan Fritsch]
+
   *) Restore visibility of DEFAULT_PIDLOG to core and modules.  MPM 
      helper function ap_remove_pid() added.  [Jeff Trawick]
 
